# SimpleConfig

./: .gitignore  CMakeLists.txt  README.md
scf/: .CMakeLists.txt.swp  .scf.c.swp  .table.c.swp  CMakeLists.txt  lexer.c  lexer_test.c  parser.c  parser_test.c  scf.c  scf_test.c  table.c  table_test.c
scf/scf/: .table.h.swp  lexer.h  parser.h  scf.h  table.h
